# llm-smollm2

./: README.md  pyproject.toml
llm_smollm2/: __init__.py
tests/: test_smollm2.py
